--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,10 @@ repositories {
     mavenCentral()
 }
 
-task fatJar(type: Jar) {
+jar {
     manifest {
         attributes 'Main-Class': 'org.example.EconomistBot'
     }
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    with jar
 }
 
 dependencies {
