--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,21 @@ repositories {
     mavenCentral()
 }
 
-jar {
+task fatJar(type: Jar) {
     manifest {
         attributes 'Main-Class': 'org.example.EconomistBot'
     }
+    archiveBaseName.set('ThEconomistDownloader')
+    archiveVersion.set('1.0-SNAPSHOT')
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    with jar
 }
+
+
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
