--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,2 @@
-telegramBotToken=6530358402:AAG28dxK3SQCjlPIYayi-aysMNAI8oOZcyw
+bot.token=6530358402:AAG28dxK3SQCjlPIYayi-aysMNAI8oOZcyw
+bot.username=https://t.me/Theworldinbrief_bot
